fixed mega menu covering header contribute button

--- a/_src/assets/css/index.css
+++ b/_src/assets/css/index.css
@@ -115,6 +115,10 @@ a.logo img {
     max-height: 48.750px;
 }
 
+a.item, a.logo, .items a.button {
+    z-index: 950;
+}
+
 a.item {
     height: var(--navheight);
     display: flex;
@@ -122,7 +126,6 @@ a.item {
     padding: 0 13px;
     transition: background-color 0.25s ease;
     color: inherit;
-    z-index: 950;
     position: relative;
 }
 
